--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches: [master]
 jobs:
   build:
-    runs-on: selt-hosted
+    runs-on: self-hosted
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
